--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~12.1.2",
+    "@angular/localize": "~12.1.2",
+    "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.0",
+    "ng2-validation": "^4.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uikit": "^3.11.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
