--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "combodoc": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "lint": "ng lint",
+    "postinstall": "ng build --prod"
   },
   "private": true,
+  "engines": {
+    "node": "14.15.5",
+    "npm": "6.14.11"
+  },
   "dependencies": {
     "@angular/animations": "~12.1.2",
     "@angular/cdk": "^12.2.13",
